[package]
name = "iced_core"
version = "0.10.0"
authors = ["Héctor Ramón Jiménez <hector0193@gmail.com>"]
edition = "2021"
description = "The essential concepts of Iced"
license = "MIT"
repository = "https://github.com/iced-rs/iced"

[dependencies]
bitflags = "1.2"
thiserror = "1"
log = "0.4.17"
twox-hash = { version = "1.5", default-features = false }

[dependencies.palette]
version = "0.7"
optional = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
instant = "0.1"

[dev-dependencies]
approx = "0.5"

# Only needed for Key types
[dependencies.winit]
version = "0.29.1-beta"
git = "https://github.com/iced-rs/winit.git"
rev = "7f1aaa652d22f14482a6c3bf9f8c5c7eb8070e1f"
default-features = false
